--- a/settings.ini
+++ b/settings.ini
@@ -5,16 +5,10 @@ log_dir = "logs"
 del_exp = True
 
 [DATA]
-#for multi-site prostate
-data_list_dir = "/media/c1501/f0e0c43d-ac95-418b-8777-9cd59f31e116/lujiangshan/Code/DCA-Net/Datasets/Mul_prostate"
-npz_data_dir = "/media/c1501/f0e0c43d-ac95-418b-8777-9cd59f31e116/lujiangshan/Data/DCANet/npz_data"
-; nii_data_dir = "/media/c1501/f0e0c43d-ac95-418b-8777-9cd59f31e116/lujiangshan/Data/DCANet/central_crop_nii"
-unseen_site = 'BIDMC/'
-
 # for multi-site fundus
-; data_dir = '/media/c1501/f0e0c43d-ac95-418b-8777-9cd59f31e116/lujiangshan/Data/Fundus-doFE/Fundus'
-; datasetTrain = [1, 2, 3]
-; datasetTest = [4]
+data_dir = './Fundus'
+datasetTrain = [1, 2, 3]
+datasetTest = [4]
 
 [NETWORK]
 num_classes = 2
@@ -66,6 +60,6 @@ margin = 10.0
 
 [EVAL]
 dataset = 'test'
-model_file = './exp/multi_fundus/deeplab_10mmd_0608_13:00/domain4/n4best_model.pth'
+model_file = './exp/multi_fundus/domain4/n4best_model.pth'
 movingbn = False
 batch_size = 1
